<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="18sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/blue"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="15sp"
        android:text="@string/wakeUpTest"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/blue" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="125dp"
        >

        <TextView
            android:id="@+id/txtLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="12sp" />
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/blue"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
    <Button
        android:id="@+id/btn_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_stop"
        android:textColor="@color/red"
        android:background="@drawable/shape"
        tools:ignore="ButtonStyle"
        android:layout_weight="1"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"/>

        <Button
            android:id="@+id/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/shape"
            android:text="@string/btn_start"
            tools:ignore="ButtonStyle"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_accessService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/btn_accessService"
        android:background="@drawable/shape"/>


    <TextView
        android:id="@+id/tip"
        android:layout_width="match_parent"
        android:layout_height="117dp"
        android:layout_gravity="center"
        android:layout_marginTop="155dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/tip"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/author"
        android:textAlignment="center"
        android:textSize="10sp"
        tools:ignore="MissingConstraints,SmallSp" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textAlignment="center"
        android:textSize="8sp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        tools:ignore="MissingConstraints,SmallSp" />

</LinearLayout>